improved error handling and meta tag

--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tewnet</title>
-    <meta name="description" content="Tewnet — Discover, track, and review movies." />
+    <title>Tewnet – Discover, Track, and Review Movies & TV Shows</title>
+    <meta name="description" content="Tewnet is a modern movie discovery platform. Browse trending movies, search for your favorites, rate and review films, and build your personal watchlist. Powered by TMDB API." />
+    <meta name="keywords" content="movies, TV shows, movie database, movie reviews, movie ratings, watchlist, favorites, TMDB, film discovery, entertainment" />
     <meta name="author" content="Tewnet" />
-
-    <meta property="og:title" content="Tewnet" />
-    <meta property="og:description" content="Discover, track, and review movies." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://tewnet.vercel.app" />
+    
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:url" content="https://tewnet.vercel.app" />
+    <meta property="og:title" content="Tewnet – Modern Movie Discovery App" />
+    <meta property="og:description" content="Discover, track, and review movies with TMDB API integration. Built with React, TypeScript & Tailwind CSS." />
+    <meta property="og:image" content="https://tewnet.vercel.app/image.png" />
+    <meta property="og:site_name" content="Tewnet" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://tewnet.vercel.app" />
+    <meta name="twitter:title" content="Tewnet – Modern Movie Discovery App" />
+    <meta name="twitter:description" content="Discover, track, and review movies with TMDB API integration. Built with React, TypeScript & Tailwind CSS." />
+    <meta name="twitter:image" content="https://tewnet.vercel.app/image.png" />
     <meta name="twitter:site" content="@tewnet" />
-    <meta name="twitter:image" content="/favicon.svg" />
   </head>
 
   <body>
